ai-telemetry/base/zookeeper/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-headless
  labels:
    app.kubernetes.io/instance: zookeeper
    app.kubernetes.io/name: zookeeper
    app.kubernetes.io/component: zookeeper
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: tcp-client
      port: 2181
      targetPort: client
    - name: tcp-follower
      port: 2888
      targetPort: follower
    - name: tcp-election
      port: 3888
      targetPort: election
  selector:
    app.kubernetes.io/instance: zookeeper
    app.kubernetes.io/name: zookeeper
    app.kubernetes.io/component: zookeeper
