ai-telemetry/base/zookeeper/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  labels:
    app.kubernetes.io/instance: zookeeper
    app.kubernetes.io/name: zookeeper
    app.kubernetes.io/component: zookeeper
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: tcp-client
      port: 2181
      targetPort: client
  selector:
    app.kubernetes.io/instance: zookeeper
    app.kubernetes.io/name: zookeeper
    app.kubernetes.io/component: zookeeper
